# loopflopy

./: .gitignore  LICENSE  README.md  environment2.yml  loopflopy_installation.docx  pyproject.toml
example/data/: example_data.xlsx
example/modelfiles/: _triangle.1.ele  mfsim.lst  mfsim.nam  model_boundary.dbf  steadymodel  steadymodel.chd  steadymodel.lst  steadymodel.rch  transientmodel.chd  transientmodel.disu.grb  transientmodel.hds
example/scripts/: process_spatial.py  process_structural.py
examples/: environment.yml  loopflopy_installation.docx
examples/Example 1 - Transect/data/: example_data.xlsx
examples/Example 1 - Transect/modelfiles/: _triangle.0.node  _triangle.0.poly  _triangle.1.edge  _triangle.1.neigh  _triangle.1.node  _triangle.1.poly  mfsim.lst  mfsim.nam  model_boundary.dbf  model_boundary.shp  model_boundary.shx  sim.ims  sim.tdis  steadymodel  steadymodel.bud  steadymodel.chd  steadymodel.disu  steadymodel.disu.grb  steadymodel.hds  steadymodel.ic  steadymodel.lst  steadymodel.nam  steadymodel.npf  steadymodel.oc  steadymodel.rch  transientmodel.wel
examples/Example 1 - Transect/scripts/: dipping_anisotropy.ipynb  main_script.ipynb  process_data.py  process_observations.py
examples/Example 2 - 3D/data/: example_data.xlsx  example_data_2.xlsx
examples/Example 2 - 3D/modelfiles/: _triangle.0.node  _triangle.1.edge  _triangle.1.ele  _triangle.1.neigh  _triangle.1.node  _triangle.1.poly  mfsim.lst  mfsim.nam  model_boundary.dbf  sim.ims  sim.tdis  steadymodel  steadymodel.bud  steadymodel.chd  steadymodel.disu.grb  steadymodel.hds  steadymodel.ic  steadymodel.lst  steadymodel.nam  steadymodel.npf  steadymodel.oc  steadymodel.rch  steadymodel_observations.csv  transientmodel  transientmodel.chd  transientmodel.hds  transientmodel.ic  transientmodel.lst  transientmodel.nam  transientmodel.npf  transientmodel.oc  transientmodel.rch  transientmodel.sto  transientmodel.wel  transientmodel_observations.csv
examples/Example 2 - 3D/scripts/: main_script.ipynb  process_observations.py  process_spatial.py  process_structural.py
examples/Example 3 - Heterogeneity/data/: example_data.xlsx  random_points.xlsx  truth_properties.xlsx
examples/Example 3 - Heterogeneity/modelfiles/: _triangle.0.node  _triangle.0.poly  _triangle.1.edge  _triangle.1.ele  _triangle.1.neigh  _triangle.1.node  _triangle.1.poly  mfsim.lst  mfsim.nam  model_boundary.dbf  model_boundary.shp  model_boundary.shx  sim.ims  sim.tdis  steadymodel  steadymodel.bud  steadymodel.chd  steadymodel.disu.grb  steadymodel.hds  steadymodel.ic  steadymodel.lst  steadymodel.nam  steadymodel.npf  steadymodel.oc  steadymodel.rch  steadymodel_observations.csv  transientmodel.lst  transientmodel.npf  transientmodel.oc  (+2 more)
loopflopy/: dem.py  flowmodel.py  flowmodel_routines.py  geomodel.py  geomodel2.py  make_project.py  mesh.py  mesh_routines.py  meshing_routines.py  modelling_routines.py  observations.py  project.py  properties.py  properties2.py  spatial.py  spatial_routines.py  structuralmodel.py  surfacerefinement.py  utils.py
src/loopflopy/: __init__.py  flowmodel.py  flowmodel_routines.py  geomodel.py  geomodel2.py  mesh.py  mesh_routines.py  observations.py  properties.py  properties2.py  spatial_routines.py  structuralmodel.py  utils.py
(+21 files in other folders)
