[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "loopflopy"
version = "0.0.0"
description = "Bridge utilities between LoopStructural and FloPy workflows."
readme = "README.md"
requires-python = ">=3.10"  # examples in 3.12
license = { text = "MIT" }
authors = [{ name = "Kerry Bardot", email = "kerry.bardot@uwa.edu.au" }]
keywords = ["hydrogeology", "modflow", "loopstructural", "flopy"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "flopy>=3.8,<4",
  "numpy>=1.23,<3",
  "pandas>=1.5,<3",
  "scipy>=1.10,<2",
]

[project.optional-dependencies]
# GIS stack used heavily in examples: reading/writing shapefiles, projections, spatial ops.
gis = [
  "geopandas>=1.0,<2",
  "shapely>=2.0,<3",
  "fiona>=1.9,<2",
  "pyproj>=3.5,<4",
  "rtree>=1.0,<2",
  "rasterstats>=0.16,<1",
  "rasterio>=1.3,<2",
]

# 3D visualization; PyVista/VTK versions are sensitive.
viz-3d = [
  "pyvista>=0.44,<0.47",# prefer to keep it <0.47 for now because this is a sensitive package
  "vtk>=9.3,<9.4",
  "trimesh>=4,<5",
]

# LoopStructural ecosystem for structural modelling examples.
loop3d = [
  "loopstructural>=1.6,<2",
  "alphashape>=1.3,<2",
  # visualization shares pyvista/vtk with viz-3d
  "pyvista>=0.44,<0.47",
  "vtk>=9.3,<9.4",
  # if you confirm the exact package name for visualisation on PyPI, add it here:
  # "loopstructuralvisualisation>=0.1.6,<1",
]

# Excel I/O seen in examples.
excel = [
  "openpyxl>=3.1,<4",
  "xlrd>=2.0,<3",
]

# Notebooks and widgets (examples are notebooks).
notebook = [
  "jupyter>=1.0,<2",
  "jupyterlab>=4.0,<5",
  "ipykernel>=6.29,<7",
  "ipywidgets>=8.1,<9",
]

# Convenience extra: everything typically needed to run the examples.
# (Union of gis + loop3d + viz-3d + excel + notebook) + matplotlib for plotting.
examples = [
  # GIS
  "geopandas>=1.0,<2", "shapely>=2.0,<3", "fiona>=1.9,<2", "pyproj>=3.5,<4",
  "rtree>=1.0,<2", "rasterstats>=0.16,<1", "rasterio>=1.3,<2",
  # LoopStructural + 3D viz
  "loopstructural>=1.6,<2", "alphashape>=1.3,<2",
  "pyvista>=0.44,<0.47", "vtk>=9.3,<9.4",
  # Excel
  "openpyxl>=3.1,<4", "xlrd>=2.0,<3",
  # Notebooks + plotting
  "jupyter>=1.0,<2", "jupyterlab>=4.0,<5", "ipykernel>=6.29,<7", "ipywidgets>=8.1,<9",
  "matplotlib>=3.7,<4",
]
# Dev/test/docs for contributors (optional).
dev = [
  "pre-commit>=3.8",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11",
  "pip-tools>=7.4",
  "deptry>=0.16",
]
test = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
]
docs = [
  "sphinx>=7,<9",
  "numpydoc>=1.6,<2",
]

[project.urls]
Homepage = "https://github.com/kerrybardot/loopflopy"
Issues = "https://github.com/kerrybardot/loopflopy/issues"

[tool.hatch.build.targets.wheel]
# src/ layout: the package lives in src/loopflopy
packages = [{ include = "loopflopy", from = "src" }]

[tool.hatch.build.targets.sdist]
# Include source package and common top-level docs; adjust as needed.  "LICENSE" is missing
include = [
  "pyproject.toml",
  "README.md",
  "src/loopflopy",
  "examples/**",
]